--- a/firebase.json
+++ b/firebase.json
@@ -14,11 +14,20 @@
     ],
     "headers": [
       {
-        "source": "/service-worker.js",
+        "source": "*",
         "headers": [
           {
             "key": "Cache-Control",
             "value": "no-cache"
+          }
+        ]
+      },
+      {
+        "source": "static/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
           }
         ]
       }
