fix incorrect glob

--- a/firebase.json
+++ b/firebase.json
@@ -23,7 +23,7 @@
         ]
       },
       {
-        "source": "static/**",
+        "source": "static/**/**",
         "headers": [
           {
             "key": "Cache-Control",
