--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended"
-    ]
+    ],
+    "rules": {
+      "semi": ["warn", "never"]
+    }
   },
   "browserslist": {
     "production": [
