--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,22 +1,18 @@
-name: "Lint"
+name: Lint
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
   workflow_dispatch:
 
 jobs:
   lint:
-    name: Lint
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup node
-        uses: actions/setup-node@v1
-
-      - run: npm install
+      - uses: actions/setup-node@v1
+      - run: npm ci
       - run: npm run lint
