--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
   "name": "gregweisbrod.com",
-  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/classnames": "^2.3.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.2",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/react-transition-group": "^4.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "@xrplf/eslint-config": "^1.4.0",
-    "@xrplf/prettier-config": "^1.2.0",
-    "classnames": "^2.3.1",
+    "@types/classnames": "^2.2.11",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-transition-group": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "4.30",
+    "@xrplf/eslint-config": "^1.6.0",
+    "@xrplf/prettier-config": "^1.5.0",
+    "classnames": "^2.2.6",
     "eslint": "^7.32.0",
-    "eslint-plugin-array-func": "^3.1.7",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jsdoc": "^36.0.8",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-transition-group": "^4.4.2",
-    "typescript": "^4.4.2"
+    "prettier": "^2.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.1",
+    "typescript": "4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,8 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "git checkout master && git pull && npm run build && firebase deploy",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "lint-fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "prettier": "@xrplf/prettier-config",
   "browserslist": {
