--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,11 +8,17 @@ on:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
       - name: Checkout code
-      - uses: actions/setup-node@v1
-      - run: npm ci
-      - run: npm run lint
+        uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v1
+      - name: Display node version
+        run: node -v
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
