--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "@xrplf/prettier-config": "^1.5.0",
     "classnames": "^2.2.6",
     "eslint": "^7.32.0",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-consistent-default-export-name": "^0.0.14",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-jsdoc": "^37.4.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "prettier": "^2.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
