--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.45.2",
     "typescript": "4.4"
   },
   "scripts": {
