--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@types/classnames": "^2.2.11",
-    "@types/node": "^17.0.5",
+    "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
@@ -17,7 +17,7 @@
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-consistent-default-export-name": "^0.0.14",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jsdoc": "^37.4.2",
+    "eslint-plugin-jsdoc": "^37.6.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
@@ -27,8 +27,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.45.2",
-    "typescript": "4.4"
+    "sass": "^1.48.0",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
