add deploy action

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,9 +17,11 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 16.x
       - name: Display node version
         run: node -v
+      - name: Display npm version
+        run: npm -v
       - name: Install dependencies
         run: npm ci
       - name: Lint
