--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,27 +1,31 @@
 name: Deploy to Firebase Hosting on merge
-'on':
+
+on:
   push:
     branches:
       - master
+
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-      - uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16.x
-      - name: Display node version
-        run: node -v
-      - name: Display npm version
-        run: npm -v
-      - name: Build and deploy
-        run: npm ci && npm run build
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GREGWEISBRODSITE }}'
-          channelId: live
-          projectId: gregweisbrodsite
+    name: Deploy
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout code
+        - uses: actions/checkout@v2
+        - name: Setup node
+          uses: actions/setup-node@v1
+          with:
+            node-version: 16.x
+        - name: Display node version
+          run: node -v
+        - name: Display npm version
+          run: npm -v
+        - name: Build and deploy
+          run: npm ci && npm run build
+          uses: FirebaseExtended/action-hosting-deploy@v0
+          with:
+            repoToken: '${{ secrets.GITHUB_TOKEN }}'
+            firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GREGWEISBRODSITE }}'
+            channelId: live
+            projectId: gregweisbrodsite
