--- a/public/.well-known/xrp-ledger.toml
+++ b/public/.well-known/xrp-ledger.toml
@@ -1,3 +1,12 @@
+# Hey there XRPL fan!
+
+[METADATA]
+modified = 2022-05-25T09:29:00
+
 [[ACCOUNTS]]
-address = "rHb9CJAWyB4rj91VRWn96DkukG4bwdtyTh"
-desc = "This is a testing address on a standalone server. IT DOES NOT correspond with mainnet."
+address = "rV3WAvwwXgvPrYiUgSoytn9w3mejtPgLo"
+desc = "Want to tip me in XRP? Do it here!"
+
+[[PRINCIPALS]]
+name = "Greg Weisbrod"
+email = "greg.weisbrod@gmail.com"
