--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "private": true,
   "type": "module",
   "devDependencies": {
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7"
-  },
-  "dependencies": {
     "@eslint/js": "^9.39.1",
     "@ledhed2222/prettier-config": "^1.0.0",
     "@types/classnames": "^2.3.0",
@@ -16,22 +12,26 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-react": "^5.1.2",
-    "classnames": "^2.5.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "react-transition-group": "^4.4.5",
     "sass": "^1.97.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "start": "vite",
